Japanese fonts in vertical text should support synthesized italics https://bugs.webkit.org/show_bug.cgi?id=169301

Reviewed by Simon Fraser.

Source/WebCore:

Updated test in fast/text/international.

* platform/graphics/Font.cpp:
(WebCore::Font::nonSyntheticItalicFont): Deleted.
* platform/graphics/Font.h:
Removed the non-synthetic italic font member, since it's not used.

* platform/graphics/FontCascadeFonts.cpp:
(WebCore::glyphDataForNonCJKCharacterWithGlyphOrientation):
Patched to ensure that a text-orientation-fallback font data is always
returned in the synthetic oblique case, so that non-CJK and CJK are
guaranteed to be broken up so that their slants can be applied differently.

(WebCore::FontCascadeFonts::glyphDataForSystemFallback):
(WebCore::FontCascadeFonts::glyphDataForNormalVariant):
(WebCore::glyphDataForCJKCharacterWithoutSyntheticItalic): Deleted.
Patched to no longer turn off synthetic oblique for CJK.

* platform/graphics/cocoa/FontCascadeCocoa.mm:
(WebCore::FontCascade::drawGlyphs):
Apply the correct italic transform to CJK when in vertical text.

LayoutTests:

* fast/text/international/synthesized-italic-vertical-expected.html:
* fast/text/international/synthesized-italic-vertical.html:
* platform/mac/fast/text/international/synthesized-italic-vertical-latin-expected.png: Removed.
* platform/mac/fast/text/international/synthesized-italic-vertical-latin-expected.txt: Removed.



Canonical link: https://commits.webkit.org/187348@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214848 268f45cc-cd09-0410-ab3c-d52691b4dbfc